# PSET2

./: .gitignore  LICENSE  README.md  checkpoint  polynomial_zeros.ipynb  pyproject.toml  report.md  responses.txt.txt
example_code/: compute_pi.py
gauss/: __init__.py  gauss.py
gauss/legendre/: bonnet.py  legroot.py
tests/: conftest.py  orthogonality.py  test_analytically_known_gauss_rules.py  test_analytically_known_legendre_polynomials.py  test_analytically_known_legendre_polys.py  test_degree_of_exactness.py  test_rootfind.py
